fix : Runtime error catch and Validation
* 유효성 검사 수정 012같이 0값을 못읽던 부분
* 입력값이 없을 때 발생하는 예외를 재입력받도록 구성
* 기타 디버깅용 Gradle 설정 파일들 변경

--- a/ohnyong_java/build.gradle
+++ b/ohnyong_java/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.example'
@@ -17,5 +18,13 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-sourceCompatibility = JavaVersion.VERSION_15
-targetCompatibility = JavaVersion.VERSION_15
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
+
+wrapper {
+    gradleVersion = '8.0'
+}
+
+application {
+    mainClassName = 'JavaPrac2week.Main' // 메인 클래스의 경로를 지정해주세요
+}
